My POrg/src/objects/Login_User__c.object
<CustomObject>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPass__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Login User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Login User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>